@startuml diagram1

class Employee {
  - firstName: String
  - lastName: String
  - socialSecurityNumber: String

  + Employee(firstName: String, lastName: String, socialSecurityNumber: String)
  + getFirstName(): String
  + setFirstName(firstName: String): void
  + getLastName(): String
  + setLastName(lastName: String): void
  + getSocialSecurityNumber(): String
  + setSocialSecurityNumber(socialSecurityNumber: String): void
}

class SalariedEmployee {
  - weeklySalary: double

  + SalariedEmployee(firstName: String, lastName: String, socialSecurityNumber: String, weeklySalary: double)
  + getWeeklySalary(): double
  + setWeeklySalary(weeklySalary: double): void
}

class HourlyEmployee {
  - wage: double
  - hoursWorked: int

  + HourlyEmployee(firstName: String, lastName: String, socialSecurityNumber: String, wage: double, hoursWorked: int)
  + getWage(): double
  + setWage(wage: double): void
  + getHoursWorked(): int
  + setHoursWorked(hoursWorked: int): void
}

class CommissionEmployee {
  - commissionRate: double
  - grossSales: double

  + CommissionEmployee(firstName: String, lastName: String, socialSecurityNumber: String, commissionRate: double, grossSales: double)
  + getCommissionRate(): double
  + setCommissionRate(commissionRate: double): void
  + getGrossSales(): double
  + setGrossSales(grossSales: double): void
}

class BaseEmployee {
  - baseSalary: double

  + BaseEmployee(firstName: String, lastName: String, socialSecurityNumber: String, baseSalary: double)
  + getBaseSalary(): double
  + setBaseSalary(baseSalary: double): void
}

Employee <|-- SalariedEmployee
Employee <|-- HourlyEmployee
Employee <|-- CommissionEmployee
Employee <|-- BaseEmployee
@enduml
